--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Гра - Видалення груп елементів</title>
+    <title>PlayToMax JS Test Task</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Ігрове поле 10x10</h1>
     <div id="game-board"></div>
-
     <script src="main.js"></script>
 </body>
 </html>
